<resources>
    <string name="app_name">Lab1</string>
    <string name="push_notification">Push Notification</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="brainstorming">Brainstorming</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="search_on_google">Search on google!</string>
    <string name="anastasia_frecautan">Anastasia Frecautan</string>
    <string name="fade_in">Fade in</string>
    <string name="fade_out">Fade out</string>
    <string name="open_photo">Open Photo</string>
    <string name="take_photo">Take Photo</string>
</resources>